--- a/ebb/Cargo.toml
+++ b/ebb/Cargo.toml
@@ -7,9 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-futures = "*"
-smol = "*"
-scoped-tls = "*"
-crossbeam-queue = "*"
+futures = "~0.3"
+smol = "~1.2"
+crossbeam-queue = "~0.3"
 
 ebb-macros = { path = "../ebb-macros" }
